Fix sidebar alignment

--- a/BlazorApp1/BlazorApp1.Client/Layout/MainLayout.razor.css
+++ b/BlazorApp1/BlazorApp1.Client/Layout/MainLayout.razor.css
@@ -10,7 +10,7 @@ main {
 
 .sidebar {
     background-color: transparent;
-    text-align: center;
+    text-align: left;
 }
 
 .top-row {
@@ -57,7 +57,7 @@ main {
         height: 100vh;
         position: sticky;
         top: 0;
-        text-align: center;
+        text-align: left;
     }
 
     .top-row {
